# sdg

./: .gitignore  README.md  pylintrc  pyproject.toml
data/: result.csv
data/dirty-echart-code/: Tangential_Polar_Bar_11.json  Tangential_Polar_Bar_19.json  Tangential_Polar_Bar_2.json  Tangential_Polar_Bar_32.json  Tangential_Polar_Bar_44.json  Tangential_Polar_Bar_50.json  Tangential_Polar_Bar_6.json  Tangential_Polar_Bar_77.json  Tangential_Polar_Bar_87.json  Tangential_Polar_Bar_98.json  Tangential_Polar_Bar_99.json  half_doughnut_chart_1.json  half_doughnut_chart_10.json  half_doughnut_chart_100.json  half_doughnut_chart_101.json  half_doughnut_chart_102.json  half_doughnut_chart_103.json  half_doughnut_chart_104.json  half_doughnut_chart_105.json  half_doughnut_chart_106.json  half_doughnut_chart_107.json  half_doughnut_chart_108.json  half_doughnut_chart_109.json  half_doughnut_chart_110.json  half_doughnut_chart_111.json  half_doughnut_chart_113.json  half_doughnut_chart_114.json  half_doughnut_chart_115.json  half_doughnut_chart_116.json  half_doughnut_chart_117.json  half_doughnut_chart_118.json  half_doughnut_chart_119.json  half_doughnut_chart_122.json  half_doughnut_chart_124.json  half_doughnut_chart_125.json  half_doughnut_chart_126.json  half_doughnut_chart_128.json  (+458 more)
metadata/: dirty-echart.metadata  echart-sample-negative.metadata  echart-sample-positive.metadata  echart-sample.metadata  echart.metadata  key_configurations.md
sdg/: config.py  cost_evaluation.py  data_insights_identify.py  dataset.py  event.py  main.py  poc.py  task.py  test.py
(+893 files in other folders)
