[project]
name = "sdg"
version = "0.1.0"
description = "Synthetic Data Generator System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "playwright>=1.51.0",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
]
